# rustfmt-merge-driver

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: test.rs
