[package]
name = "git-rustfmt-merge-driver"
description = "git-rustfmt-merge-driver."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/git-rustfmt-merge-driver"
documentation = "https://docs.rs/git-rustfmt-merge-driver"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.0.0-beta.4", features = ["wrap_help"] }
which = "4.2.2"
